// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render input field correctly email input field should accept email 1`] = `
<input
  class="border-solid border-2 border-sky-300 outline-none w-96 rounded-md p-2"
  placeholder="Enter email.."
  value=""
/>
`;

exports[`should render input field correctly password input field should be type password 1`] = `
<input
  class="border-solid border-2 border-sky-300 outline-none w-96 rounded-md p-2"
  placeholder="Enter password"
  type="password"
  value=""
/>
`;
